Refactoring and script fixing

--- a/templates/admin/notifications.html.twig
+++ b/templates/admin/notifications.html.twig
@@ -10,8 +10,8 @@
             <tr>
                 <th class="border border-slate-300">CreatedAt</th>
                 <th class="border border-slate-300">Text</th>
-                <th class="border border-slate-300">actions</th>
                 <th class="border border-slate-300">Words</th>
+                <th class="border border-slate-300">actions</th>
             </tr>
         </thead>
         <tbody>
@@ -19,6 +19,7 @@
             <tr>
                 <td class="border border-slate-300 text-xl px-2">{{ admin_notification.createdAt ? admin_notification.createdAt|date('Y-m-d H:i:s') : '' }}</td>
                 <td class="border border-slate-300 text-xl px-2">{{ admin_notification.text }}</td>
+                <td class="border border-slate-300 text-xl px-2">{{ admin_notification.words|join(', ')}}</td>
                 <td class="border border-slate-300 text-xl px-2">
                 {% if (admin_notification.user) %}
                     <button><a class="block w-fit rounded bg-gray-700 text-gray-300 hover:bg-gray-600 hover:text-white px-4 py-1 ml-2 mb-2" href="{{ path('app_user_edit', {'id': admin_notification.user.id}) }}">show</a></button>
@@ -29,14 +30,13 @@
                 {% endif %}
                 {{ include('admin/notification_delete_form.html.twig') }}
                 </td>
-                <td class="border border-slate-300 text-xl px-2">{{ admin_notification.words|join(', ')|raw }}</td>
             </tr>
-        </div>
-        </tbody>
-    </table>
         {% else %}
             <tr>
                 <td colspan="4" class="text-center text-xl">No notifications</td>
             </tr>
         {% endfor %}
+        </div>
+        </tbody>
+    </table>
 {% endblock %}
