--- a/templates/admin/password.html.twig
+++ b/templates/admin/password.html.twig
@@ -1,15 +1,21 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Change Password{% endblock %}
+
 {% block body %}
 <div class="flex container mx-auto max-w-fit my-6 mh-auto p-8 bg-gray-200 rounded-md flex-col">
-    <p class="text-xl font-semibold text-center mt-4 items-center">Change Password</p>
-
+    <p class="text-xl font-semibold text-center mt-4 items-center">
+        Change Password
+    </p>
     {{ form_start(form) }}
     {{ form_row(form.plainPassword, {'attr': {'class': 'border rounded my-2 px-1', 'placeholder': 'New Password*'}}) }}
     {{ form_row(form.confirmPassword, {'attr': {'class': 'border rounded my-2 px-1', 'placeholder': 'Confirm New Password*'}}) }}
-
-    <div><button type="submit" class="inline-block w-fit rounded bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white px-4 pb-1.5 pt-2 mt-2 font-sans">Change Password</button></div>
-    <button><a class="inline-block w-fit rounded bg-gray-700 text-gray-300 hover:bg-gray-600 hover:text-white px-4 pb-1.5 pt-2 mt-2 font-sans" href="{{ path('app_admin_users') }}">Back to Users</a></button>
+    <div class="flex flex-col">
+        <button type="submit" class="block w-fit rounded bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white px-4 pb-1.5 pt-2 mt-2 font-sans">Change Password</button>
+        <button>
+            <a class="block w-fit rounded bg-gray-700 text-gray-300 hover:bg-gray-600 hover:text-white px-4 pb-1.5 pt-2 mt-2 font-sans" href="{{ path('app_admin_users') }}">Back to Users</a>
+        </button>
+    </div>
     {{ form_end(form) }}
 </div>
 {% endblock %}
