--- a/templates/admin/blacklist_delete_form.html.twig
+++ b/templates/admin/blacklist_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('app_admin_blacklist_delete', {'id': blacklist.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ blacklist.id) }}">
-    <button class="btn">Remove</button>
+    <button class="btn block w-fit rounded bg-gray-700 text-gray-300 hover:bg-gray-600 hover:text-white px-3 pb-1 pt-2">Remove</button>
 </form>
