--- a/templates/admin/forbidden.html.twig
+++ b/templates/admin/forbidden.html.twig
@@ -1,34 +1,41 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}ForbiddenWords index{% endblock %}
+{% block title %}Inappropriate Words{% endblock %}
 
 {% block body %}
-    <p class="text-2xl font-semibold ml-2">Inappropriate Words</p>
-
-    <button><a class="block w-fit rounded bg-gray-700 text-gray-300 hover:bg-gray-600 hover:text-white px-4 pb-1.5 pt-2 ml-2 mt-2" href="{{ path('app_admin_forbidden_new') }}">Add more</a></button>
-
+<section>
+    <p class="text-2xl font-semibold ml-2">
+        Inappropriate Words
+    </p>
+    <button>
+        <a class="block w-fit rounded bg-gray-700 text-gray-300 hover:bg-gray-600 hover:text-white px-4 pb-1.5 pt-2 ml-2 mt-2" href="{{ path('app_admin_forbidden_new') }}">Add more</a>
+    </button>
     <table class="table-auto border-separate border border-slate-400 rounded-lg mx-2 mt-4 w-fit">
-    <div class="">
-        <thead>
-            <tr>
-                <th class="border border-slate-300 basis-full">Words</th>
-                <th class="border border-slate-300 basis-1/4"></th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for forbidden_word in forbidden_words %}
-            <tr>
-                <td class="border border-slate-300 basis-1/2 text-xl px-2">{{ forbidden_word.words }}</td>
-                <td class="px-2">
-                    {{ include('admin/forbidden_delete_form.html.twig') }}
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="3">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </div>
+        <div class="">
+            <thead>
+                <tr>
+                    <th class="border border-slate-300 basis-full">
+                        Words
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for forbidden_word in forbidden_words %}
+                <tr>
+                    <td class="border border-slate-300 basis-1/2 text-xl px-2">
+                        {{ forbidden_word.words }}
+                    </td>
+                    <td class="px-2">
+                        {{ include('admin/forbidden_delete_form.html.twig') }}
+                    </td>
+                </tr>
+            {% else %}
+                <tr>
+                    <td colspan="3">no records found</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </div>
     </table>
+</section>
 {% endblock %}
