--- a/templates/admin/forbidden_new.html.twig
+++ b/templates/admin/forbidden_new.html.twig
@@ -1,12 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New ForbiddenWords{% endblock %}
+{% block title %}New Word{% endblock %}
 
 {% block body %}
-<div class="flex flex-col mx-auto max-w-fit my-6 mh-auto p-8 bg-gray-200 rounded-md">
-    <p class="text-xl font-semibold text-center mt-4 items-center">Add forbidden words</p>
-
+<div class="flex flex-col mx-auto w-fit my-6 mh-auto p-8 bg-gray-200 rounded-md">
+    <p class="text-2xl font-semibold text-center mt-4 mb-4 items-center">
+        Add Inappropriate Words
+    </p>
     {{ include('admin/forbidden_form.html.twig') }}
-
-    <button><a class="block w-fit rounded bg-gray-700 text-gray-300 hover:bg-gray-600 hover:text-white px-4 pb-1.5 pt-2 mt-2" href="{{ path('app_admin_forbidden_words') }}">back to list</a></button>
+    <button>
+        <a class="block w-fit rounded bg-gray-700 text-gray-300 hover:bg-gray-600 hover:text-white px-4 pb-1.5 pt-2 mt-2" href="{{ path('app_admin_forbidden_words') }}">Back</a>
+    </button>
+</div>
 {% endblock %}
