--- a/templates/admin/user_edit.html.twig
+++ b/templates/admin/user_edit.html.twig
@@ -4,12 +4,13 @@
 
 {% block body %}
 <div class="flex flex-col mx-auto max-w-fit my-6 mh-auto p-8 bg-gray-200 rounded-md">
-    <p class="text-xl font-semibold text-center mt-4 items-center">Edit Profile</p>
-
+    <p class="text-xl font-semibold text-center mt-4 items-center">
+        Edit Profile
+    </p>
     {{ include('admin/user_edit_form.html.twig', {'button_label': 'Update'}) }}
     {{ include('admin/user_delete_form.html.twig') }}
-
-
-    <button><a class="block w-fit rounded bg-gray-700 text-gray-300 hover:bg-gray-600 hover:text-white px-4 pb-1.5 pt-2 mt-2 font-sans" href="{{ path('app_admin_users') }}">Back to Users</a></button>
+    <button>
+        <a class="block w-fit rounded bg-gray-700 text-gray-300 hover:bg-gray-600 hover:text-white px-4 pb-1.5 pt-2 mt-2 font-sans" href="{{ path('app_admin_users') }}">Back to Users</a>
+    </button>
 </div>
 {% endblock %}
