--- a/templates/blog/edit.html.twig
+++ b/templates/blog/edit.html.twig
@@ -4,7 +4,9 @@
 
 {% block body %}
 <div class="flex flex-col justify-center container mx-auto max-w-1/2 h-fit my-6 mh-auto p-8 bg-gray-200 rounded-md">
-    <p class="text-center text-2xl font-semibold mb-2">Edit Blog</p>
+    <p class="text-center text-2xl font-semibold mb-2">
+        Edit Blog
+    </p>
     {{ include('blog/_form.html.twig', {'button_label': 'Update Blog'}) }}
     {{ include('blog/_delete_form.html.twig') }}
 </div>
