--- a/templates/blog/myBlogs.html.twig
+++ b/templates/blog/myBlogs.html.twig
@@ -2,26 +2,47 @@
 
 {% block title %}My Blogs{% endblock %}
 
+{% block javascripts %}
+    {{ parent()}}
+    <script src="{{ asset('js/scroll.js') }}"></script>
+{% endblock %}
+
 {% block body %}
 <main>
     <section class="flex flex-col bg-white bg-opacity-60 w-fit px-6 rounded-md mx-auto">
-        <p class="text-4xl mx-auto mt-2">Your Blogs, {{ app.user.userName }}</p>
+        <p class="text-4xl mx-auto mt-2">
+            Your Blogs, {{ app.user.userName }}
+        </p>
         <div id="blog-container">
-        {% for blog in blogs %}
-            <div class="flex-col blog-item py-4 bg-gray-400 bg-opacity-40 rounded-md mb-6 px-2">
-            <p class="text-2xl ml-2">{{ blog.title }}</p>
-            <p class=" text-s ml-2">{{ blog.createdAt|date('Y-M-d H:i') }}</p>
-            <p><iframe width="750" height="422" src="https://www.youtube.com/embed/{{ blog.videoUrl }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
-            <p class="py-0.5 ml-2">Likes: {{ blog.getLikesCount() }} Comments: {{ blog.getCommentsCount() }}</p>
-            <button class="ml-2"><a class="font-sans block w-full h-full bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-1 text-sm font-medium" href="{{ path('app_blog_show', {'id': blog.id}) }}">View</a></button>
-            <button><a class="font-sans block w-full h-full bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-1 text-sm font-medium" href="{{ path('app_blog_edit', {'id': blog.id}) }}">Edit</a></button>
-            <div class="ml-2">
-                {{ include('blog/_delete_form.html.twig') }}
-            </div>
-            </div>
-        {% else %}
-            <p class="text-center text-xl font-medium mt-4 mb-2"> You have no blogs-><a class="text-blue-800" href="{{ path('app_blog_new') }}">Create Some</a></p>
-        {% endfor %}
+            {% for blog in blogs %}
+                <div class="flex-col blog-item py-4 bg-gray-400 bg-opacity-40 rounded-md mb-6 px-2">
+                    <p class="text-2xl ml-2">
+                        {{ blog.title }}
+                    </p>
+                    <p class=" text-s ml-2">
+                        {{ blog.createdAt|date('Y-M-d H:i') }}
+                    </p>
+                    <p>
+                        <iframe width="750" height="422" src="https://www.youtube.com/embed/{{ blog.videoUrl }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </p>
+                    <p class="py-0.5 ml-2">
+                        Likes: {{ blog.getLikesCount() }} Comments: {{ blog.getCommentsCount() }}
+                    </p>
+                    <button class="ml-2">
+                        <a class="font-sans block w-full h-full bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-1 text-sm font-medium" href="{{ path('app_blog_show', {'id': blog.id}) }}">View</a>
+                    </button>
+                    <button>
+                        <a class="font-sans block w-full h-full bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-1 text-sm font-medium" href="{{ path('app_blog_edit', {'id': blog.id}) }}">Edit</a>
+                    </button>
+                    <div class="ml-2">
+                        {{ include('blog/_delete_form.html.twig') }}
+                    </div>
+                </div>
+            {% else %}
+                <p class="text-center text-xl font-medium mt-4 mb-2">
+                     You have no blogs-><a class="text-blue-800" href="{{ path('app_blog_new') }}">Create Some</a>
+                </p>
+            {% endfor %}
         </div>
         <div id="pagination-loader" data-offset="7"></div>
         <div id="url" data-url="{{ url }}" style="display: none;"></div>
