--- a/templates/blog/new.html.twig
+++ b/templates/blog/new.html.twig
@@ -4,8 +4,9 @@
 
 {% block body %}
 <div class="flex flex-col justify-center container mx-auto max-w-1/2 h-fit my-6 mh-auto p-8 bg-gray-200 rounded-md">
-    <p class="text-center text-2xl font-semibold mb-2">Create new Blog</p>
-
+    <p class="text-center text-2xl font-semibold mb-2">
+        Create new Blog
+    </p>
     {{ include('blog/_form.html.twig') }}
 </div>
 {% endblock %}
