--- a/templates/comments/show.html.twig
+++ b/templates/comments/show.html.twig
@@ -1,28 +1,41 @@
 {% block body %}
-    <p class="text-xl">Add a comment</p>
-        {{ include('comments/_form.html.twig', {'button_label': 'Submit'}) }}
+    <div class="mb-1">
+        <p class="text-xl">
+            Add a comment
+        </p>
+    </div>
+    {{ include('comments/_form.html.twig', {'button_label': 'Submit'}) }}
     {% if blog.comments is empty %}
-        <p class="text-xl">No Comments</p>
+        <p class="text-2xl mt-2">
+            No Comments
+        </p>
     {% else %}
+        <p class="text-2xl mt-2">
+            Comments:
+        </p>
         {% for comment in comments %}
-        <div class="my-8">
-            <div class="text-lg">{% if comment.getCreatedBy() == blog.getCreatedBy() %}
-            <p>OP - 
-            {% endif %}
-            {{ comment.getCreatedBy() }} on {{ comment.getCreatedAt()|date('d-M-Y H:i') }}
-            {% if comment.edited() and comment.getCreatedAt()|date('d-M-Y H:i') != comment.getEditedAt()|date('d-M-Y H:i') %}
-                (Edited : {{ comment.getEditedAt|date('d-M-Y H:i') }})
-            {% endif %}:</p>
-            <p class="w-3/4 text-ellipsis overflow-hidden">{{ comment.getText()|nl2br|raw }}</p>
-            {% if app.user == comment.getCreatedBy() %}
-            <div class="flex flex-row">
-            <button><a class="font-sans block w-fit h-full bg-gray-700 text-gray-300 hover:bg-gray-600 hover:text-white rounded-md px-2.5 py-1 mt-1 text-sm font-medium" href="{{ path('app_comments_edit', {'id': comment.id}) }}">Edit</a></button>
-            <div class="block w-fit h-full bg-red-600 text-gray-200 hover:bg-red-500 hover:text-white rounded-md px-2.5 py-1 mt-1 ml-4 text-sm font-medium">
-            {{ include('comments/_delete_form.html.twig') }}
+            <div class="my-6">
+                <div class="text-xl">
+                    {% if comment.getCreatedBy() == blog.getCreatedBy() %}
+                        <p>OP - 
+                    {% endif %}
+                    {{ comment.getCreatedBy() }} on {{ comment.getCreatedAt()|date('d-M-Y H:i') }}
+                    {% if comment.edited() and comment.getCreatedAt()|date('d-M-Y H:i') != comment.getEditedAt()|date('d-M-Y H:i') %}
+                        (Edited : {{ comment.getEditedAt|date('d-M-Y H:i') }})
+                    {% endif %}:</p>
+                    <p class="w-3/4 text-ellipsis overflow-hidden">{{ comment.getText()|nl2br|raw }}</p>
+                    {% if app.user == comment.getCreatedBy() %}
+                        <div class="flex flex-row mt-2">
+                            <button>
+                                <a class="inline-block w-fit h-full bg-gray-700 text-gray-300 hover:bg-gray-600 hover:text-white rounded-md px-2.5 py-1 mt-1 text-sm font-medium" href="{{ path('app_comments_edit', {'id': comment.id}) }}">Edit</a>
+                            </button>
+                            <div class="block w-fit h-full bg-red-600 text-gray-200 hover:bg-red-500 hover:text-white rounded-md px-2.5 py-1 mt-1 ml-4 text-sm font-medium">
+                                {{ include('comments/_delete_form.html.twig') }}
+                            </div>
+                        </div>
+                    {% endif %}
+                </div>
             </div>
-            </div>
-            {% endif %}</div>
-        </div>
         {% endfor %}
     {% endif %}
 {% endblock %}
