--- a/templates/admin/comments.html.twig
+++ b/templates/admin/comments.html.twig
@@ -7,59 +7,56 @@
     <p class="text-2xl font-semibold ml-4">
         Comments
     </p>
-    <table class="table border-separate border border-slate-400 rounded-lg mx-4 mt-4">
-        <thead>
-            <tr>
-                <th class="border border-slate-300 w-32">
-                    Created At
-                </th>
-                <th class="border border-slate-300">
-                    User
-                </th>
-                <th class="border border-slate-300">
-                    Comment
-                </th>
-                <th class="border border-slate-300 px-2">
-                    Edited
-                </th>
-                <th class="border border-slate-300 w-32">
-                    Edited At
-                </th>
-                <th class="border border-slate-300">
-                    Actions
-                </th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for comment in comments %}
-            <tr>
-                <td class="border border-slate-300 text-xl px-2 w-32">
-                    {{ comment.createdAt ? comment.createdAt|date('Y-m-d H:i') : '' }}
-                </td>
-                <td class="border border-slate-300 text-xl px-2">
-                    {{ comment.createdBy }}
-                </td>
-                <td class="border border-slate-300 text-xl px-2">
-                    {{ comment.text }}
-                </td>
-                <td class="border border-slate-300 text-xl px-2">
-                    {{ comment.edited ? 'Yes' : 'No' }}
-                </td>
-                <td class="border border-slate-300 text-xl px-2 w-32">
-                    {{ comment.editedAt ? comment.editedAt|date('Y-m-d H:i') : '' }}
-                </td>
-                <td class="border border-slate-300 text-xl px-2">
-                    {{ include('admin/comment_delete_form.html.twig') }}
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="6">
-                    No records found.
-                </td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+    <div>
+        <table class="table border-separate border border-slate-400 rounded-lg mx-4 mt-4">
+            <thead>
+                <tr>
+                    <th class="border border-slate-300 w-32">
+                        Created At
+                    </th>
+                    <th class="border border-slate-300">
+                        User
+                    </th>
+                    <th class="border border-slate-300">
+                        Comment
+                    </th>
+                    <th class="border border-slate-300 px-2">
+                        Edited
+                    </th>
+                    <th class="border border-slate-300 w-32">
+                        Edited At
+                    </th>
+                    <th class="border border-slate-300">
+                        Actions
+                    </th>
+                </tr>
+            </thead>
+
+            <tbody>
+                {% for comment in comments %}
+                    <tr>
+                        <td class="border border-slate-300 text-xl px-2 w-32">
+                            {{ comment.createdAt ? comment.createdAt|date('Y-m-d H:i') : '' }}
+                        </td>
+                        <td class="border border-slate-300 text-xl px-2">
+                            {{ comment.createdBy }}
+                        </td>
+                        <td class="border border-slate-300 text-xl px-2">
+                            {{ comment.text }}
+                        </td>
+                        <td class="border border-slate-300 text-xl px-2">
+                            {{ comment.edited ? 'Yes' : 'No' }}
+                        </td>
+                        <td class="border border-slate-300 text-xl px-2 w-32">
+                            {{ comment.editedAt ? comment.editedAt|date('Y-m-d H:i') : '' }}
+                        </td>
+                        <td class="border border-slate-300 text-xl px-2">
+                            {{ include('admin/comment_delete_form.html.twig') }}
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 </main>
 {% endblock %}
