--- a/templates/blog/myBlogs.html.twig
+++ b/templates/blog/myBlogs.html.twig
@@ -4,7 +4,7 @@
 
 {% block javascripts %}
     {{ parent()}}
-    <script src="{{ asset('js/scroll.js') }}"></script>
+    <script src="{{ asset('js/blogScroll.js') }}"></script>
 {% endblock %}
 
 {% block body %}
