--- a/templates/home/categoryIndex.html.twig
+++ b/templates/home/categoryIndex.html.twig
@@ -5,7 +5,7 @@
 {% block javascripts %}
     {{ parent()}}
     <script src="{{ asset('js/search.js') }}"></script>
-    <script src="{{ asset('js/scroll.js') }}"></script>
+    <script src="{{ asset('js/blogScroll.js') }}"></script>
 {% endblock %}
 
 {% block body %}
