--- a/templates/blog/show.html.twig
+++ b/templates/blog/show.html.twig
@@ -22,6 +22,9 @@
             <button class="font-sans block w-fit h-full bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-2.5 py-1 mt-2 text-m font-medium">
                 <a href='{{ path('app_blog_user', {'id': blog.createdBy.id}) }}'>See more by {{ blog.createdBy }}</a>
             </button>
+            <div class="block w-fit h-full bg-red-600 text-gray-200 hover:bg-red-500 hover:text-white rounded-md px-2 py-0.5 mt-1 text-xs font-medium">
+                {{ include('blog/_report_form.html.twig') }}
+            </div>
             <div class="mt-4 mb-2">
             {% include './comments/show.html.twig' %}
             </div>
