--- a/templates/comments/show.html.twig
+++ b/templates/comments/show.html.twig
@@ -23,7 +23,8 @@
                     {% if comment.edited() and comment.getCreatedAt()|date('d-M-Y H:i') != comment.getEditedAt()|date('d-M-Y H:i') %}
                         (Edited : {{ comment.getEditedAt|date('d-M-Y H:i') }})
                     {% endif %}:</p>
-                    <p class="w-3/4 text-ellipsis overflow-hidden">{{ comment.getText()|nl2br|raw }}</p>
+                    <p class="w-3/4 text-ellipsis overflow-hidden">{{ comment.getText()|nl2br }}</p>
+
                     {% if app.user == comment.getCreatedBy() %}
                         <div class="flex flex-row mt-2">
                             <button>
@@ -32,6 +33,10 @@
                             <div class="block w-fit h-full bg-red-600 text-gray-200 hover:bg-red-500 hover:text-white rounded-md px-2.5 py-1 mt-1 ml-4 text-sm font-medium">
                                 {{ include('comments/_delete_form.html.twig') }}
                             </div>
+                        </div>
+                    {% else %}
+                        <div class="block w-fit h-full bg-red-600 text-gray-200 hover:bg-red-500 hover:text-white rounded-md px-0.5 py-0.5 mt-1 text-xs font-medium">
+                            {{ include('comments/_report_form.html.twig') }}
                         </div>
                     {% endif %}
                 </div>
