--- a/templates/admin/notifications.html.twig
+++ b/templates/admin/notifications.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Notifications{% endblock %}
 
 {% block body %}
+<button><a class="block w-fit rounded bg-gray-700 text-gray-300 hover:bg-gray-600 hover:text-white px-4 py-1 ml-2 mb-2" href="{{ path('app_admin_reports') }}">Reports</a></button>
    <p class="text-2xl font-semibold ml-2">Notifications</p>
 
     <table class="table border-separate border border-slate-400 rounded-lg mx-2 mt-4 w-3/4">
