--- a/templates/admin/blog_delete_form.html.twig
+++ b/templates/admin/blog_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('app_admin_blog_delete', {'id': blog.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('app_admin_blog_delete', {'id': blog.id}) }}" onsubmit="return confirm('Are you sure you want to delete this blog');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ blog.id) }}">
     <button class="btn font-sans block w-fit h-full bg-red-600 text-gray-200 hover:bg-red-500 hover:text-white rounded-md px-2.5 py-1 mt-1 text-sm font-medium">Delete</button>
 </form>
