--- a/templates/blog/show.html.twig
+++ b/templates/blog/show.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Blog{% endblock %}
 
 {% block body %}
-<div class="grid grid-cols-2 mx-4 mt-4">
+<div class="grid grid-cols-2 mx-4 mt-4" {% if blog.hidden %}style="display: none;"{% endif %}>
     <div class="col-start-1 text-3xl font-medium">
         {{blog.title}}
     </div>
@@ -18,13 +18,18 @@
     <div class="col-start-1 mt-8 h-fit">
         <iframe class="border-gray-800 border-4 rounded-md" width="900" height="506" src="https://www.youtube.com/embed/{{ blog.videoUrl }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         {% if app.user %}
+            {% if (blog.verified) %}
+            <p class="text-m text-green-500">Verified</p>
+            {% endif %}
             {% include './blog/like.html.twig' %}
             <button class="font-sans block w-fit h-full bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-2.5 py-1 mt-2 text-m font-medium">
                 <a href='{{ path('app_blog_user', {'id': blog.createdBy.id}) }}'>See more by {{ blog.createdBy }}</a>
             </button>
+            {% if not (blog.verified) and app.user != blog.createdBy %}
             <div class="block w-fit h-full bg-red-600 text-gray-200 hover:bg-red-500 hover:text-white rounded-md px-2 py-0.5 mt-1 text-xs font-medium">
                 {{ include('blog/_report_form.html.twig') }}
             </div>
+            {% endif %}
             <div class="mt-4 mb-2">
             {% include './comments/show.html.twig' %}
             </div>
