--- a/templates/comments/show.html.twig
+++ b/templates/comments/show.html.twig
@@ -34,7 +34,7 @@
                                 {{ include('comments/_delete_form.html.twig') }}
                             </div>
                         </div>
-                    {% else %}
+                    {% elseif not comment.verified %}
                         <div class="block w-fit h-full bg-red-600 text-gray-200 hover:bg-red-500 hover:text-white rounded-md px-0.5 py-0.5 mt-1 text-xs font-medium">
                             {{ include('comments/_report_form.html.twig') }}
                         </div>
