--- a/templates/admin/reports.html.twig
+++ b/templates/admin/reports.html.twig
@@ -15,11 +15,18 @@
         <tbody>
         {% for report in reports %}
             <tr>
-                <td class="border border-slate-300 text-xl px-2">This blog has recieved {{report.getReportsCount()}} reports</td>
                 <td class="border border-slate-300 text-xl px-2">
-
-                <button><a class="block w-fit rounded bg-gray-700 text-gray-300 hover:bg-gray-600 hover:text-white px-4 py-1 ml-2 mb-2" href="{{ path('app_admin_blog', {'id': report.id}) }}">show</a></button>
-                </td>
+                    {% if report.type == 'blog' %}
+                        This blog has recieved {{report.getReportsCount()}} reports</td>
+                        <td class="border border-slate-300 text-xl px-2">
+                            <button><a class="block w-fit rounded bg-gray-700 text-gray-300 hover:bg-gray-600 hover:text-white px-4 py-1 ml-2 mb-2" href="{{ path('app_admin_blog', {'id': report.id}) }}">show</a></button>
+                        </td>
+                    {% elseif report.type == 'comment' %}
+                        This comment has recieved {{report.getReportsCount()}} reports</td>
+                        <td class="border border-slate-300 text-xl px-2">
+                            <button><a class="block w-fit rounded bg-gray-700 text-gray-300 hover:bg-gray-600 hover:text-white px-4 py-1 ml-2 mb-2" href="{{ path('app_admin_comment', {'id': report.id}) }}">show</a></button>
+                        </td>
+                    {% endif %}
             </tr>
         {% else %}
             <tr>
