--- a/templates/admin/comment_delete_form.html.twig
+++ b/templates/admin/comment_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('app_admin_comments_delete', {'id': comment.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('app_admin_comments_delete', {'id': comment.id}) }}" onsubmit="return confirm('Are you sure you want to delete this comment?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ comment.id) }}">
     <button class="btn block w-fit rounded bg-red-700 text-gray-300 hover:bg-red-600 hover:text-white px-4 py-1 mx-2">Delete</button>
 </form>
