--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{% block title %}Welcome!{% endblock %}</title>
+        <link rel="icon" href="{{ asset('image/favicon.png') }}" type="image/png">
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
         <link rel="stylesheet" href="{{ asset('css/styles.css') }}">
