--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -12,7 +12,8 @@
 <main>
 <section>
 <div class="flex flex-col bg-white bg-opacity-60 w-fit px-6 rounded-md mx-auto">
-    <p class="text-4xl mx-auto mt-2">Latest Blogs</p><select id="categoryFilter" class="border rounded ml-2 px-1 my-3">
+    <p class="text-4xl mx-auto mt-2">Latest Blogs</p>
+    <select id="categoryFilter" class="border rounded ml-2 px-1 my-3">
         <option value="" selected>View Categories...</option>
         {% for category in categories %}
             <option value={{ category.id }}>{{ category.getCategory() }}</option>
