--- a/templates/home/_blog_items.html.twig
+++ b/templates/home/_blog_items.html.twig
@@ -1,7 +1,7 @@
 {% for blog in blogs %}
     <div class="flex flex-col blog-item py-4 bg-gray-400 bg-opacity-40 rounded-md mb-6 px-2">
         <p class="text-2xl ml-2">{{ blog.title }}</p>
-        <p class=" text-s ml-2">{{ blog.createdAt|date('d-M-Y H:i') }} By: {{ blog.createdBy }}</p>
+        <p class=" text-s ml-2">{{ blog.createdAt|date('d-M-Y H:i') }} By: <a href='{{ path('app_blog_user', {'id': blog.createdBy.id}) }}'>{{ blog.createdBy }}</a></p>
         <iframe width="750" height="422" src="https://www.youtube.com/embed/{{ blog.videoUrl }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <p class="py-0.5 ml-2">Likes: {{ blog.getLikesCount() }} Comments: {{ blog.getCommentsCount() }}</p>
         {% if (is_granted('IS_AUTHENTICATED_FULLY')) %}
