Fixed all logic. Started responsive nav/foot/base/login/logout/index

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,7 +15,7 @@
         {% include 'script.html.twig' %}
         {% endblock %}
     </head>
-    <body class="bg-gradient-to-r from-white to-gray-500 mt-20 mb-10 flex flex-col font-sans">
+    <body class="2xl:bg-gradient-to-r from-white to-gray-500 2xl:mt-20 2xl:mb-10 2xl:flex 2xl:flex-col 2xl:font-sans bg-gray-100">
         {% include 'nav.html.twig' %}
         {% include './security/flash.html.twig' %}
         {% block body %}
