--- a/templates/blog/myBlogs.html.twig
+++ b/templates/blog/myBlogs.html.twig
@@ -40,7 +40,7 @@
                 </div>
             {% else %}
                 <p class="text-center text-xl font-medium mt-4 mb-2">
-                     You have no blogs-><a class="text-blue-800" href="{{ path('app_blog_new') }}">Create Some</a>
+                     You have no blogs-><a class="text-blue-800" href="{{ path('app_blog_new') }}">Create a Blog</a>
                 </p>
             {% endfor %}
         </div>
