--- a/templates/comments/show.html.twig
+++ b/templates/comments/show.html.twig
@@ -1,4 +1,5 @@
 {% block body %}
+<div class="">
     <div class="mb-1">
         <p class="text-xl">
             Add a comment
@@ -43,4 +44,5 @@
             </div>
         {% endfor %}
     {% endif %}
+</div>
 {% endblock %}
