--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,5 +1,5 @@
 <footer>
-<div class="fixed inset-x-0 bottom-0 z-50 grid min-w-full place-items-center align-middle h-8 bg-gray-800 text-white font-sans">
+<div class="2xl:fixed 2xl:inset-x-0 2xl:bottom-0 2xl:z-50 2xl:grid 2xl:min-w-full 2xl:place-items-center 2xl:align-middle 2xl:h-8 2xl:bg-gray-800 2xl:text-white 2xl:font-sans fixed inset-x-0 bottom-0 z-50 grid place-items-center align-middle bg-gray-800 text-white">
     <p>&copy; {{ 'now'|date('Y') }} Why not DIY!</p>
 </div>
 </footer>
