--- a/templates/home/_blog_items.html.twig
+++ b/templates/home/_blog_items.html.twig
@@ -1,13 +1,13 @@
 {% for blog in blogs %}
-    <div class="flex flex-col blog-item py-4 bg-gray-400 bg-opacity-40 rounded-md mb-6 px-2">
-        <p class="text-2xl ml-2">{{ blog.title }}</p>
-        <p class=" text-s ml-2">{{ blog.createdAt|date('d-M-Y H:i') }} By: <a href='{{ path('app_blog_user', {'id': blog.createdBy.id}) }}'>{{ blog.createdBy }}</a></p>
+    <div class="2xl:flex 2xl:flex-col 2xl:blog-item 2xl:py-4 2xl:bg-gray-400 2xl:bg-opacity-40 2xl:rounded-md 2xl:mb-6 2xl:px-2">
+        <p class="2xl:text-2xl 2xl:ml-2">{{ blog.title }}</p>
+        <p class="2xl:text-s 2xl:ml-2">{{ blog.createdAt|date('d-M-Y H:i') }} By: <a href='{{ path('app_blog_user', {'id': blog.createdBy.id}) }}'>{{ blog.createdBy }}</a></p>
         <iframe width="750" height="422" src="https://www.youtube.com/embed/{{ blog.videoUrl }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <p class="py-0.5 ml-2">Likes: {{ blog.getLikesCount() }} Comments: {{ blog.getCommentsCount() }}</p>
+        <p class="2xl:py-0.5 2xl:ml-2">Likes: {{ blog.getLikesCount() }} Comments: {{ blog.getCommentsCount() }}</p>
         {% if (is_granted('IS_AUTHENTICATED_FULLY')) %}
-            <button class="ml-2"><a class="font-sans block w-fit h-full bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium" href="{{ path('app_blog_show', {'id': blog.id}) }}">Show more</a></button>
+            <button class="2xl:ml-2"><a class="2xl:font-sans 2xl:block 2xl:w-fit 2xl:h-full 2xl:bg-gray-800 2xl:text-gray-300 2xl:hover:bg-gray-700 2xl:hover:text-white 2xl:rounded-md 2xl:px-3 2xl:py-2 2xl:text-sm 2xl:font-medium" href="{{ path('app_blog_show', {'id': blog.id}) }}">Show more</a></button>
         {% else %}
-            <button class="ml-2"><a class="font-sans block w-fit h-full bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium" href="{{ path('app_login') }}">Login</a></button>
+            <button class="2xl:ml-2"><a class="2xl:font-sans 2xl:block 2xl:w-fit 2xl:h-full 2xl:bg-gray-800 2xl:text-gray-300 2xl:hover:bg-gray-700 2xl:hover:text-white 2xl:rounded-md 2xl:px-3 2xl:py-2 2xl:text-sm 2xl:font-medium" href="{{ path('app_login') }}">Login</a></button>
         {% endif %}
     </div>
 {% endfor %}
