--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -1,49 +1,78 @@
 <header>
-<nav class="bg-gray-800 text-white px-64 font-sans fixed inset-x-0 top-0 z-50">
-  <div class="grid grid-cols-12 place-items-center align-middle h-16">
-    <div class="col-start-1">
-      <a href="{{ path('home') }}" class="bg-gray-900 text-white rounded-md px-3 py-2 text-m font-medium" aria-current="page">Home</a>
+<nav class="2xl:bg-gray-800 2xl:text-white 2xl:px-64 2xl:font-sans 2xl:fixed 2xl:inset-x-0 2xl:top-0 2xl:z-50">
+  <div class="flex flex-row-reverse 2xl:grid 2xl:grid-cols-12 2xl:place-items-center 2xl:align-middle 2xl:h-16">
+    <div class="2xl:hidden">
+      <button id="mobile-menu-btn" class="fixed top-0 right-0 bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2  mr-2 mt-2 text-m font-medium">
+        Menu
+      </button>
+      <button id="mobile-home" class="fixed top-0 left-0 bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2  ml-2 mt-2 text-m font-medium">
+        <a href="{{ path('home') }}">Home</a>
+      </button>
+      <div id="mobile-menu" class="hidden items-stretch text-center fixed top-14 left-0 z-50">
+        <a href="{{ path('home') }}" class="block w-screen text-white bg-gray-800 py-2 text-m font-medium">Home</a>
+            {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+              {% if is_granted('ROLE_admin') %}
+                <a href="{{ path('app_admin_blogs') }}" class="block text-white bg-gray-800 py-2 text-m font-medium">All Blogs</a>
+                <a href="{{ path('app_admin_comments') }}" class="block text-white bg-gray-800 py-2 text-m font-medium">Comments</a>
+                <a href="{{ path('app_admin_users') }}" class="block text-white bg-gray-800 py-2 text-m font-medium">Users</a>
+                <a href="{{ path('app_admin_forbidden_words') }}" class="block text-white bg-gray-800 py-2 text-m font-medium">Words</a>
+                <a href="{{ path('app_admin_blacklist') }}" class="block text-white bg-gray-800 py-2 text-m font-medium">Blacklist</a>
+                <a href="{{ path('app_admin_notifications') }}" class="block text-white bg-gray-800 py-2 text-m font-medium">Notifications</a>
+              {% else %}
+                <a href="{{ path('app_blog_new') }}" class="block text-white bg-gray-800 py-2 text-m font-medium">Create blog</a>
+                <a href="{{ path('app_blog_mine') }}" class="block text-white bg-gray-800 py-2 text-m font-medium">My blogs</a>
+                <a href="{{ path('app_user_show', {'id': app.user.id}) }}" class="block text-white bg-gray-800 py-2 text-m font-medium">Profile</a>
+              {% endif %}
+              <a href="{{ path('logout') }}" class="block text-white bg-gray-800 py-2 text-m font-medium">Logout</a>
+            {% else %}
+              <a href="{{ path('app_signup') }}" class="block text-white bg-gray-800 py-2 text-m font-medium">Sign Up</a>
+              <a href="{{ path('app_login') }}" class="block text-white bg-gray-800 py-2 text-m font-medium">Sign In</a>
+            {% endif %}
+      </div>
+    </div>
+    <div class="hidden 2xl:block 2xl:col-start-1">
+      <a href="{{ path('home') }}" class="2xl:bg-gray-900 2xl:text-white 2xl:rounded-md 2xl:px-3 2xl:py-2 2xl:text-m 2xl:font-medium" aria-current="page">Home</a>
     </div>
     {% if is_granted('IS_AUTHENTICATED_FULLY') %}
       {% if is_granted('ROLE_admin') %}
-        <div class="col-start-2">
-          <a href="{{ path('app_admin_blogs') }}" class="bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-m font-medium">All Blogs</a>
+        <div class="hidden 2xl:block 2xl:col-start-2">
+          <a href="{{ path('app_admin_blogs') }}" class="2xl:bg-gray-800 2xl:text-gray-300 2xl:hover:bg-gray-700 2xl:hover:text-white 2xl:rounded-md 2xl:px-3 2xl:py-2 2xl:text-m 2xl:font-medium">All Blogs</a>
         </div>
-        <div class="col-start-3">
-          <a href="{{ path('app_admin_comments') }}" class="bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-m font-medium">Comments</a>
+        <div class="hidden 2xl:block 2xl:col-start-3">
+          <a href="{{ path('app_admin_comments') }}" class="2xl:bg-gray-800 2xl:text-gray-300 2xl:hover:bg-gray-700 2xl:hover:text-white 2xl:rounded-md 2xl:px-3 2xl:py-2 2xl:text-m 2xl:font-medium">Comments</a>
         </div>
-        <div class="col-start-4">
-          <a href="{{ path('app_admin_users') }}" class="bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-m font-medium">Users</a>
+        <div class="hidden 2xl:block 2xl:col-start-4">
+          <a href="{{ path('app_admin_users') }}" class="2xl:bg-gray-800 2xl:text-gray-300 2xl:hover:bg-gray-700 2xl:hover:text-white 2xl:rounded-md 2xl:px-3 2xl:py-2 2xl:text-m 2xl:font-medium">Users</a>
         </div>
-        <div class="col-start-5">
-          <a href="{{ path('app_admin_forbidden_words') }}" class="bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-m font-medium">Words</a>
+        <div class="hidden 2xl:block 2xl:col-start-5">
+          <a href="{{ path('app_admin_forbidden_words') }}" class="2xl:bg-gray-800 2xl:text-gray-300 2xl:hover:bg-gray-700 2xl:hover:text-white 2xl:rounded-md 2xl:px-3 2xl:py-2 2xl:text-m 2xl:font-medium">Words</a>
         </div>
-        <div class="col-start-6">
-          <a href="{{ path('app_admin_blacklist') }}" class="bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-m font-medium">Blacklist</a>
+        <div class="hidden 2xl:block 2xl:col-start-6">
+          <a href="{{ path('app_admin_blacklist') }}" class="2xl:bg-gray-800 2xl:text-gray-300 2xl:hover:bg-gray-700 2xl:hover:text-white 2xl:rounded-md 2xl:px-3 2xl:py-2 2xl:text-m 2xl:font-medium">Blacklist</a>
         </div>
-        <div class="col-start-7">
-          <a href="{{ path('app_admin_notifications') }}" class="bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-m font-medium">Notifications</a>
+        <div class="hidden 2xl:block 2xl:col-start-7">
+          <a href="{{ path('app_admin_notifications') }}" class="2xl:bg-gray-800 2xl:text-gray-300 2xl:hover:bg-gray-700 2xl:hover:text-white 2xl:rounded-md 2xl:px-3 2xl:py-2 2xl:text-m 2xl:font-medium">Notifications</a>
         </div>
       {% else %}
-        <div class="col-start-2">
-          <a href="{{ path('app_blog_new') }}" class="bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-2 py-2 text-m font-medium">Create blog</a>
+        <div class="hidden 2xl:block 2xl:col-start-2">
+          <a href="{{ path('app_blog_new') }}" class="2xl:bg-gray-800 2xl:text-gray-300 2xl:hover:bg-gray-700 2xl:hover:text-white 2xl:rounded-md 2xl:px-3 2xl:py-2 2xl:text-m 2xl:font-medium">Create blog</a>
         </div>
-        <div class="col-start-3">
-          <a href="{{ path('app_blog_mine') }}" class="bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-m font-medium">My blogs</a>
+        <div class="hidden 2xl:block 2xl:col-start-3">
+          <a href="{{ path('app_blog_mine') }}" class="2xl:bg-gray-800 2xl:text-gray-300 2xl:hover:bg-gray-700 2xl:hover:text-white 2xl:rounded-md 2xl:px-3 2xl:py-2 2xl:text-m 2xl:font-medium">My blogs</a>
         </div>
-        <div class="col-start-11">
-          <a href="{{ path('app_user_show', {'id': app.user.id}) }}" class="bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-m font-medium">Profile</a>
+        <div class="hidden 2xl:block 2xl:col-start-11">
+          <a href="{{ path('app_user_show', {'id': app.user.id}) }}" class="2xl:bg-gray-800 2xl:text-gray-300 2xl:hover:bg-gray-700 2xl:hover:text-white 2xl:rounded-md 2xl:px-3 2xl:py-2 2xl:text-m 2xl:font-medium">Profile</a>
         </div>
       {% endif %}
-      <div class="col-start-12">
-        <a href="{{ path('logout') }}" class="bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-m font-medium">Logout</a>
+      <div class="hidden 2xl:block 2xl:col-start-12">
+        <a href="{{ path('logout') }}" class="2xl:bg-gray-800 2xl:text-gray-300 2xl:hover:bg-gray-700 2xl:hover:text-white 2xl:rounded-md 2xl:px-3 2xl:py-2 2xl:text-m 2xl:font-medium">Logout</a>
       </div>
     {% else %}
-      <div class="col-start-10">
-        <a href="{{ path('app_signup') }}" class="bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-m font-medium">Sign Up</a>
+      <div class="hidden 2xl:block 2xl:col-start-10">
+        <a href="{{ path('app_signup') }}" class="2xl:bg-gray-800 2xl:text-gray-300 2xl:hover:bg-gray-700 2xl:hover:text-white 2xl:rounded-md 2xl:px-3 2xl:py-2 2xl:text-m 2xl:font-medium">Sign Up</a>
       </div>
-      <div class="col-start-11">
-        <a href="{{ path('app_login') }}" class="bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-m font-medium">Sign In</a>
+      <div class="hidden 2xl:block 2xl:col-start-11">
+        <a href="{{ path('app_login') }}" class="2xl:bg-gray-800 2xl:text-gray-300 2xl:hover:bg-gray-700 2xl:hover:text-white 2xl:rounded-md 2xl:px-3 2xl:py-2 2xl:text-m 2xl:font-medium">Sign In</a>
       </div>
     {% endif %}
   </div>
