--- a/templates/blog/myBlogs.html.twig
+++ b/templates/blog/myBlogs.html.twig
@@ -8,23 +8,22 @@
 {% endblock %}
 
 {% block body %}
-<main>
-    <section class="flex flex-col bg-white bg-opacity-60 w-fit px-6 rounded-md mx-auto">
-        <p class="text-4xl mx-auto mt-2">
+<main class="mx-2">
+    <section class="flex flex-col pt-14 mx-auto 2xl:pt-0 2xl:bg-white 2xl:bg-opacity-60 2xl:w-3/5 2xl:px-6 2xl:rounded-md 2xl:mx-auto">
+        <p class="text-3xl mx-auto pb-2 2xl:text-4xl 2xl:mx-auto 2xl:mt-2 2xl:pb-0">
             Your Blogs, {{ app.user.userName }}
         </p>
         <div id="blog-container">
             {% for blog in blogs %}
-                <div class="flex-col blog-item py-4 bg-gray-400 bg-opacity-40 rounded-md mb-6 px-2">
-                    <p class="text-2xl ml-2">
+                <div class="flex-col blog-item px-1 mb-3 py-1 rounded-md bg-gray-400 bg-opacity-40 2xl:py-4 2xl:mb-6 2xl:px-2">
+                    <p class="text-xl mx-auto 2xl:text-2xl 2xl:ml-2">
                         {{ blog.title }}
                     </p>
-                    <p class=" text-s ml-2">
+                    <p class="text-s 2xl:ml-2">
                         {{ blog.createdAt|date('Y-M-d H:i') }}
                     </p>
-                    <p>
-                        <iframe width="750" height="422" src="https://www.youtube.com/embed/{{ blog.videoUrl }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    </p>
+                    <iframe class="hidden 2xl:block" width="100%" height="500" src="https://www.youtube.com/embed/{{ blog.videoUrl }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="block 2xl:hidden" width="100%" height="300" src="https://www.youtube.com/embed/{{ blog.videoUrl }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <p class="py-0.5 ml-2">
                         Likes: {{ blog.getLikesCount() }} Comments: {{ blog.getCommentsCount() }}
                     </p>
@@ -44,7 +43,7 @@
                 </p>
             {% endfor %}
         </div>
-        <div id="pagination-loader" data-offset="7"></div>
+        <div id="pagination-loader" data-offset="7" class="mb-6 2xl:mb-0"></div>
         <div id="url" data-url="{{ url }}" style="display: none;"></div>
     </section>
 </main>
