--- a/templates/blog/show.html.twig
+++ b/templates/blog/show.html.twig
@@ -3,11 +3,12 @@
 {% block title %}Blog{% endblock %}
 
 {% block body %}
-<div class="grid grid-cols-2 mx-4 mt-4" {% if blog.hidden %}style="display: none;"{% endif %}>
-    <div class="col-start-1 text-3xl font-medium">
+<main class="mx-2 2xl:mx-0">
+<div class="flex flex-col mt-14 2xl:grid 2xl:grid-cols-2 2xl:mx-4 2xl:mt-4" {% if blog.hidden %}style="display: none;"{% endif %}>
+    <div class="text-center 2xl:text-left 2xl:col-start-1 text-2xl 2xl:text-3xl font-medium">
         {{blog.title}}
     </div>
-    <div class="col-start-2 text-xl text-right">
+    <div class="my-2 2xl:my-0 2xl:col-start-2 2xl:text-xl 2xl:text-right">
         <p>
             {{ blog.createdAt|date('d-M-Y H:i') }} By: <a href='{{ path('app_blog_user', {'id': blog.createdBy.id}) }}'>{{ blog.createdBy }}</a>
         </p>
@@ -15,18 +16,20 @@
             (Edited : {{ blog.editedAt|date('d-M-Y H:i') }})
         {% endif %}
     </div>
-    <div class="col-start-1 mt-8 h-fit">
-        <iframe class="border-gray-800 border-4 rounded-md" width="900" height="506" src="https://www.youtube.com/embed/{{ blog.videoUrl }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <div class="2xl:col-start-1 2xl:mt-8 2xl:h-fit">
+        <iframe class="hidden 2xl:block 2xl:border-gray-800 2xl:border-4 2xl:rounded-md" width="900" height="506" src="https://www.youtube.com/embed/{{ blog.videoUrl }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe class="block 2xl:hidden" width="100%" height="300" src="https://www.youtube.com/embed/{{ blog.videoUrl }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         {% if app.user %}
             {% if (blog.verified) %}
             <p class="text-m text-green-500">Verified</p>
             {% endif %}
+            <div class="2xl:hidden block 2xl:col-start-2 2xl:mt-8">{{ blog.text|nl2br }}</div>
             {% include './blog/like.html.twig' %}
-            <button class="font-sans block w-fit h-full bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-2.5 py-1 mt-2 text-m font-medium">
+            <button class="block w-fit 2xl:h-full bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-2.5 py-1 mt-2 text-m font-medium">
                 <a href='{{ path('app_blog_user', {'id': blog.createdBy.id}) }}'>See more by {{ blog.createdBy }}</a>
             </button>
             {% if not (blog.verified) and app.user != blog.createdBy %}
-            <div class="block w-fit h-full bg-red-600 text-gray-200 hover:bg-red-500 hover:text-white rounded-md px-2 py-0.5 mt-1 text-xs font-medium">
+            <div class="block w-fit h-full bg-red-600 text-gray-200 hover:bg-red-500 hover:text-white rounded-md px-2 py-0.5 mt-3 2xl:mt-1 text-xs font-medium">
                 {{ include('blog/_report_form.html.twig') }}
             </div>
             {% endif %}
@@ -34,10 +37,10 @@
             {% include './comments/show.html.twig' %}
             </div>
             <button>
-                <a class="font-sans block w-full h-full bg-gray-700 text-gray-300 hover:bg-gray-600 hover:text-white rounded-md px-3 py-2 text-sm font-medium" href="{{ path('app_blog_index') }}">Back to Home</a>
+                <a class="hidden 2xl:block 2xl:w-full 2xl:h-full 2xl:bg-gray-700 2xl:text-gray-300 2xl:hover:bg-gray-600 2xl:hover:text-white 2xl:rounded-md 2xl:px-3 2xl:py-2 2xl:text-sm 2xl:font-medium" href="{{ path('app_blog_index') }}">Back to Home</a>
             </button>
         {% endif %}
     </div>
-    <div class="col-start-2 mt-8">{{ blog.text|nl2br }}</div>
+    <div class="hidden 2xl:block 2xl:col-start-2 2xl:mt-8">{{ blog.text|nl2br }}</div>
 </div>
 {% endblock %}
