--- a/templates/home/categoryIndex.html.twig
+++ b/templates/home/categoryIndex.html.twig
@@ -11,8 +11,8 @@
 {% block body %}
 <main>
 <section>
-<div class="flex flex-col bg-white bg-opacity-60 w-fit px-6 rounded-md mx-auto">
-    <p class="text-4xl mx-auto mt-2">Latest Blogs, {{ category }}</p>
+<div class="flex flex-col pt-10 mx-auto 2xl:flex 2xl:flex-col 2xl:pt-0 2xl:bg-white 2xl:bg-opacity-60 2xl:w-3/5 2xl:px-6 2xl:rounded-md 2xl:mx-auto">
+    <p class="text-4xl mx-auto mt-2 text-center 2xl:text-left">Latest Blogs, {{ category }}</p>
     <select id="categoryFilter" class="border rounded ml-2 px-1 my-3">
         <option value="" selected>View Categories...</option>
         {% for category in categories %}
@@ -23,15 +23,16 @@
     
     <div id="blog-container">
         {% for blog in blogs %}
-            <div class="flex-col blog-item py-4 bg-gray-400 bg-opacity-40 rounded-md mb-6 px-2">
-                <p class="text-2xl ml-2">{{ blog.title }}</p>
-                <p class=" text-s ml-2">{{ blog.createdAt|date('d-M-Y H:i') }} By: <a href='{{ path('app_blog_user', {'id': blog.createdBy.id}) }}'>{{ blog.createdBy }}</a></p>
-                <iframe width="750" height="422" src="https://www.youtube.com/embed/{{ blog.videoUrl }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <p class="py-0.5 ml-2">Likes: {{ blog.getLikesCount() }} Comments: {{ blog.getCommentsCount() }}</p>
+            <div class="flex flex-col blog-item px-1 mb-3 py-1 rounded-md bg-gray-400 bg-opacity-40 2xl:py-4 2xl:mb-6 2xl:px-2">
+                <p class="text-xl mx-auto 2xl:text-2xl 2xl:ml-2">{{ blog.title }}</p>
+                <p class="2xl:text-s 2xl:ml-2">{{ blog.createdAt|date('d-M-Y H:i') }} By: <a href='{{ path('app_blog_user', {'id': blog.createdBy.id}) }}'>{{ blog.createdBy }}</a></p>
+                <iframe class="hidden 2xl:block" width="100%" height="500" src="https://www.youtube.com/embed/{{ blog.videoUrl }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="block 2xl:hidden" width="100%" height="300" src="https://www.youtube.com/embed/{{ blog.videoUrl }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <p class="2xl:py-0.5 2xl:ml-2">Likes: {{ blog.getLikesCount() }} Comments: {{ blog.getCommentsCount() }}</p>
                 {% if (is_granted('IS_AUTHENTICATED_FULLY')) %}
-                <button class="ml-2"><a class="font-sans block w-full h-full bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium" href="{{ path('app_blog_show', {'id': blog.id}) }}">Show more</a></button>
+                    <button class="2xl:ml-2"><a class="block w-full h-full 2xl:w-fit 2xl:h-full bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-1 2xl:py-2 2xl:text-sm 2xl:font-medium" href="{{ path('app_blog_show', {'id': blog.id}) }}">Show more</a></button>
                 {% else %}
-                <button class="ml-2"><a class="font-sans block w-full h-full bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium" href="{{ path('app_login') }}">Login</a></button>
+                    <button class="2xl:ml-2"><a class="block w-full h-full 2xl:w-fit 2xl:h-full bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-1 2xl:py-2 2xl:text-sm 2xl:font-medium" href="{{ path('app_login') }}">Login</a></button>
                 {% endif %}
             </div>
         {% endfor %}
