Updated blog to post

--- a/templates/admin/blog_show.html.twig
+++ b/templates/admin/blog_show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Blog{% endblock %}
+{% block title %}Post{% endblock %}
 
 {% block body %}
 <div class="grid grid-cols-2 mx-4 mt-4">
