--- a/templates/admin/users.html.twig
+++ b/templates/admin/users.html.twig
@@ -39,7 +39,7 @@
                     </td>
                     <td class="border border-slate-300 w-fit text-xl px-2">
                         <button>
-                            <a class="block w-fit rounded bg-gray-700 text-gray-300 hover:bg-gray-600 hover:text-white px-4 py-1 ml-2" href="{{ path('app_admin_userblogs', {'id': user.id}) }}">Blogs</a>
+                            <a class="block w-fit rounded bg-gray-700 text-gray-300 hover:bg-gray-600 hover:text-white px-4 py-1 ml-2" href="{{ path('app_admin_userblogs', {'id': user.id}) }}">Posts</a>
                         </button>
                         <button>
                             <a class="block w-fit rounded bg-gray-700 text-gray-300 hover:bg-gray-600 hover:text-white px-4 py-1 ml-2" href="{{ path('app_admin_user_edit', {'id': user.id}) }}">Profile</a>
