--- a/templates/blog/_report_form.html.twig
+++ b/templates/blog/_report_form.html.twig
@@ -1,3 +1,3 @@
-<form method="post" action="{{ path('app_blog_report', {'id': blog.id}) }}" onsubmit="return confirm('Are you sure you want to report this blog?');">
-    <button class="btn">Report Blog</button>
+<form method="post" action="{{ path('app_blog_report', {'id': blog.id}) }}" onsubmit="return confirm('Are you sure you want to report this post?');">
+    <button class="btn">Report Post</button>
 </form>
