--- a/templates/blog/edit.html.twig
+++ b/templates/blog/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Blog{% endblock %}
+{% block title %}Edit Post{% endblock %}
 
 {% block body %}
 <div class="flex flex-col justify-center container mx-auto max-w-1/2 h-fit my-6 mh-auto p-8 bg-gray-200 rounded-md">
     <p class="text-center text-2xl font-semibold mb-2">
-        Edit Blog
+        Edit Post
     </p>
-    {{ include('blog/_form.html.twig', {'button_label': 'Update Blog'}) }}
+    {{ include('blog/_form.html.twig', {'button_label': 'Update Post'}) }}
     {{ include('blog/_delete_form.html.twig') }}
 </div>
 {% endblock %}
