--- a/templates/blog/myBlogs.html.twig
+++ b/templates/blog/myBlogs.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}My Blogs{% endblock %}
+{% block title %}My Posts{% endblock %}
 
 {% block javascripts %}
     {{ parent()}}
@@ -11,7 +11,7 @@
 <main class="mx-2">
     <section class="flex flex-col pt-14 mx-auto 2xl:pt-0 2xl:bg-white 2xl:bg-opacity-60 2xl:w-3/5 2xl:px-6 2xl:rounded-md 2xl:mx-auto">
         <p class="text-3xl mx-auto pb-2 2xl:text-4xl 2xl:mx-auto 2xl:mt-2 2xl:pb-0">
-            Your Blogs, {{ app.user.userName }}
+            Your Posts, {{ app.user.userName }}
         </p>
         <div id="blog-container">
             {% for blog in blogs %}
@@ -39,7 +39,7 @@
                 </div>
             {% else %}
                 <p class="text-center text-xl font-medium mt-4 mb-2">
-                     You have no blogs-><a class="text-blue-800" href="{{ path('app_blog_new') }}">Create a Blog</a>
+                     You have no posts-><a class="text-blue-800" href="{{ path('app_blog_new') }}">Create a Post</a>
                 </p>
             {% endfor %}
         </div>
