--- a/templates/blog/new.html.twig
+++ b/templates/blog/new.html.twig
@@ -1,12 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Blog{% endblock %}
+{% block title %}New Post{% endblock %}
 
 {% block body %}
 <main class="mx-2 2xl:mx-0">
 <div class="flex flex-col justify-center container pt-2 mt-20 2xl:mx-auto 2xl:max-w-1/2 2xl:h-fit 2xl:my-6 2xl:mh-auto 2xl:p-8 bg-gray-200 rounded-md">
     <p class="text-center text-2xl font-semibold mb-2">
-        Create new Blog
+        Create new Post
     </p>
     {{ include('blog/_form.html.twig') }}
 </div>
