--- a/templates/blog/show.html.twig
+++ b/templates/blog/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Blog{% endblock %}
+{% block title %}Post{% endblock %}
 
 {% block body %}
 <main class="mx-2 2xl:mx-0">
