--- a/templates/blog/userBlogs.html.twig
+++ b/templates/blog/userBlogs.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Blogs{% endblock %}
+{% block title %}Posts{% endblock %}
 
 {% block javascripts %}
     {{ parent()}}
@@ -11,7 +11,7 @@
 <main>
     <section class="flex flex-col bg-white bg-opacity-60 w-fit px-6 rounded-md mx-auto">
         <p class="text-4xl mx-auto mt-2">
-            Latest Blogs by {{ username }}
+            Latest Posts by {{ username }}
         </p>
         <div id="blog-container">
             {% for blog in blogs %}
