--- a/templates/comments/edit.html.twig
+++ b/templates/comments/edit.html.twig
@@ -15,7 +15,7 @@
             {{ include('comments/_delete_form.html.twig') }}
         </div>
         <button>
-            <a class="font-sans block w-fit h-full bg-gray-600 text-gray-300 hover:bg-gray-500 hover:text-white rounded-md px-2.5 py-1 mt-1 mb-2 text-m font-medium"href="{{ path('app_blog_show', {'id': comment.blog.id}) }}">Back to blog</a>
+            <a class="font-sans block w-fit h-full bg-gray-600 text-gray-300 hover:bg-gray-500 hover:text-white rounded-md px-2.5 py-1 mt-1 mb-2 text-m font-medium"href="{{ path('app_blog_show', {'id': comment.blog.id}) }}">Back to post</a>
         </button>
     </div>
 </main>
