--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -12,21 +12,21 @@
 <main>
 <section class="mx-2">
 <div class="flex flex-col pt-8 mx-auto 2xl:flex 2xl:flex-col 2xl:pt-0 2xl:bg-white 2xl:bg-opacity-60 2xl:w-3/5 2xl:px-6 2xl:rounded-md 2xl:mx-auto">
-    <p class="text-3xl mx-auto pb-2 2xl:text-4xl 2xl:mx-auto 2xl:mt-2 2xl:pb-0">Latest Blogs</p>
+    <p class="text-3xl mx-auto pb-2 2xl:text-4xl 2xl:mx-auto 2xl:mt-2 2xl:pb-0">Latest Posts</p>
     <select id="categoryFilter" class="border py-2 rounded 2xl:ml-2 px-1 my-3">
         <option value="" selected>View Categories...</option>
         {% for category in categories %}
             <option value={{ category.id }}>{{ category.getCategory() }}</option>
         {% endfor %}
     </select>
-    <input type="text" class="border rounded 2xl:ml-2 py-2 px-1 my-3" id="searchInput" placeholder="Search blogs...">
+    <input type="text" class="border rounded 2xl:ml-2 py-2 px-1 my-3" id="searchInput" placeholder="Search posts...">
     
     <div id="blog-container">
         {% for blog in blogs %}
             <div class="flex flex-col blog-item px-1 mb-3 py-1 rounded-md bg-gray-400 bg-opacity-40 2xl:py-4 2xl:mb-6 2xl:px-2">
                 <p class="text-xl mx-auto 2xl:text-2xl 2xl:ml-2">{{ blog.title }}</p>
                 <p class="text-s 2xl:ml-2">{{ blog.createdAt|date('d-M-Y H:i') }} By: <a href='{{ path('app_blog_user', {'id': blog.createdBy.id}) }}'>{{ blog.createdBy }}</a></p>
-                <iframe class="hidden 2xl:block" width="100%" height="500" src="https://www.youtube.com/embed/{{ blog.videoUrl }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="hidden 2xl:block" width="100%" height="550" src="https://www.youtube.com/embed/{{ blog.videoUrl }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <iframe class="block 2xl:hidden" width="100%" height="300" src="https://www.youtube.com/embed/{{ blog.videoUrl }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <p class="2xl:py-0.5 2xl:ml-2">Likes: {{ blog.getLikesCount() }} Comments: {{ blog.getCommentsCount() }}</p>
                 {% if (is_granted('IS_AUTHENTICATED_FULLY')) %}
