Fixed search and scroll

--- a/templates/home/categoryIndex.html.twig
+++ b/templates/home/categoryIndex.html.twig
@@ -19,7 +19,7 @@
             <option value={{ category.id }}>{{ category.getCategory() }}</option>
         {% endfor %}
     </select>
-    <input type="text" class="border rounded ml-2 px-1 my-3" id="searchCatInput" placeholder="Search posts...">
+    <input type="text" class="border rounded ml-2 px-1 my-3" id="searchInput" placeholder="Search posts...">
     
     <div id="blog-container">
         {% for blog in blogs %}
