Fixed search pagination in category

--- a/templates/script.html.twig
+++ b/templates/script.html.twig
@@ -3,9 +3,9 @@
 <script src="https://cdn.tailwindcss.com"></script>
 <script>
   document.addEventListener('DOMContentLoaded', function () {
-    var mobileMenuBtn = document.getElementById('mobile-menu-btn');
-    var mobileMenu = document.getElementById('mobile-menu');
-    var mobileHome = document.getElementById('mobile-home');
+    const mobileMenuBtn = document.getElementById('mobile-menu-btn');
+    const mobileMenu = document.getElementById('mobile-menu');
+    const mobileHome = document.getElementById('mobile-home');
 
     mobileMenuBtn.addEventListener('click', function () {
       mobileMenu.classList.toggle('hidden');
